bugfix for RNAseqShinyAppSpark functiont by setting roxygen parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ImmuneFractionPlot)
 export(ImmuneFractionPlot_mae)
 export(LimmaMAE)
 export(Prep4ExprComp)
+export(RNAseqShinyAppSpark)
 export(TissueTyper)
 export(convert_long_to_wide)
 export(dbBrowserServer)
