setting DESCRIPTION and NAMESPACE to install and import required packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,3 +36,33 @@ export(show_spark_tables)
 export(sparkConnectionServer)
 export(sparkConnectionUI)
 export(target_exprofile)
+import(DBI)
+import(DT)
+import(MultiAssayExperiment)
+import(RColorBrewer)
+import(SummarizedExperiment)
+import(bslib)
+import(clusterProfiler)
+import(dplyr)
+import(edgeR)
+import(enrichplot)
+import(ggplot2)
+import(ggrepel)
+import(limma)
+import(org.Hs.eg.db)
+import(pcaPP)
+import(pheatmap)
+import(readr)
+import(readxl)
+import(reshape2)
+import(shiny)
+import(shinybusy)
+import(sparklyr)
+import(stringr)
+import(tibble)
+import(tidyr)
+import(viridis)
+importFrom(DT,dataTableOutput)
+importFrom(DT,renderDataTable)
+importFrom(enrichplot,color_palette)
+importFrom(ggpubr,color_palette)
