--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,9 +34,10 @@ Imports:
     org.Hs.eg.db (>= 3.19.1),
     enrichplot (>= 1.24.4),
     clusterProfiler (>= 4.12.6),
-    shiny,
+    shiny (>= 1.7.1),
     shinybusy,
     DBI,
-    DT
+    DT,
+    bslib
 
 
