feat: add new functions for creating MAE objects and generating heatmaps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,14 @@ export(Prep4ExprComp)
 export(RNAseqShinyAppSpark)
 export(TissueTyper)
 export(convert_long_to_wide)
+export(create_mae_airway)
+export(create_mae_airway_edgeR)
 export(dbBrowserServer)
 export(dbBrowserUI)
-export(demo_oncoExprAppSpark)
 export(expr_pattern)
 export(filterModuleServer)
 export(filterModuleUI)
+export(generate_colData)
 export(generate_colData_random)
 export(generate_coldata_for_local_tcga_data)
 export(generate_sample_info)
@@ -24,11 +26,11 @@ export(input_and_prep_file)
 export(input_and_prep_file_directly)
 export(kegg_enrich_dotplot)
 export(mTissueTyper)
+export(make_heatmap_mae)
 export(mod_filter_server)
 export(mod_filter_sidebar_ui)
-export(oncoExprApp)
-export(oncoExprAppSpark)
 export(query_spark_rnaseqdata)
+export(run_heatmap_app)
 export(sampleSelectionServer)
 export(sampleSelectionUI)
 export(se2longformat)
@@ -38,6 +40,7 @@ export(sparkConnectionUI)
 export(target_exprofile)
 import(DBI)
 import(DT)
+import(InteractiveComplexHeatmap)
 import(MultiAssayExperiment)
 import(RColorBrewer)
 import(SummarizedExperiment)
