fix: add md files and documents about interactive plots module and related functions for enhanced visualization in RNAseqShinyApp to install package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,12 @@ export(go_enrich_dotplot)
 export(gtf2expr)
 export(input_and_prep_file)
 export(input_and_prep_file_directly)
+export(interactivePlotsServer)
+export(interactivePlotsUI)
 export(kegg_enrich_dotplot)
 export(mTissueTyper)
 export(make_heatmap_mae)
+export(make_heatmap_mae_pheatmap)
 export(mod_filter_server)
 export(mod_filter_sidebar_ui)
 export(query_spark_rnaseqdata)
@@ -38,6 +41,7 @@ export(show_spark_tables)
 export(sparkConnectionServer)
 export(sparkConnectionUI)
 export(target_exprofile)
+export(transfExprFormat)
 import(DBI)
 import(DT)
 import(InteractiveComplexHeatmap)
@@ -49,6 +53,7 @@ import(clusterProfiler)
 import(dplyr)
 import(edgeR)
 import(enrichplot)
+import(ggiraph)
 import(ggplot2)
 import(ggrepel)
 import(limma)
