feat: import shinydashboard in RNAseqShinyApp and heatmap functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ import(readxl)
 import(reshape2)
 import(shiny)
 import(shinybusy)
+import(shinydashboard)
 import(sparklyr)
 import(stringr)
 import(tibble)
