--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    edgeR (>= 4.2.2),
+    remotes,
+    BiocManager (>= 3.3),
     limma (>= 3.60.6),
-    MultiAssayExperiment (>= 1.30.3),
-    SummarizedExperiment (>= 1.34.0),
     pcaPP (>= 2.0-5),
     reshape2 (>= 1.4.4),
     stringr (>= 1.5.1),
@@ -31,15 +30,20 @@ Imports:
     readr (>= 2.1.5),
     dplyr (>= 1.1.4),
     sparklyr (>= 1.8.6),
-    org.Hs.eg.db (>= 3.19.1),
-    enrichplot (>= 1.24.4),
-    clusterProfiler (>= 4.12.6),
     shiny (>= 1.7.1),
     shinybusy,
+    org.Hs.eg.db,
     DBI,
     DT,
     bslib,
     shinydashboard,
-    ggiraph
-
-
+    ggiraph,
+    pysparklyr
+Remotes:
+    bioc::3.3/edgeR,
+    bioc::3.3/MultiAssayExperiment,
+    bioc::3.3/SummarizedExperiment,
+    bioc::3.3/enrichplot,
+    bioc::3.3/clusterProfiler,
+    bioc::3.3/Biobase,
+    bioc::3.3/InteractiveComplexHeatmap
