fix: move 'limma' and 'org.Hs.eg.db' to remote Bioconductor installation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    remotes,
-    limma (>= 3.60.6),
     pcaPP (>= 2.0-5),
     reshape2 (>= 1.4.4),
     stringr (>= 1.5.1),
@@ -31,7 +29,6 @@ Imports:
     sparklyr (>= 1.8.6),
     shiny (>= 1.7.1),
     shinybusy,
-    org.Hs.eg.db,
     DBI,
     DT,
     bslib,
@@ -45,4 +42,6 @@ Remotes:
     bioc::3.20/enrichplot,
     bioc::3.20/clusterProfiler,
     bioc::3.20/Biobase,
-    bioc::3.20/InteractiveComplexHeatmap
+    bioc::3.20/InteractiveComplexHeatmap,
+    bioc::3.20/limma,
+    bioc::3.20/org.Hs.eg.db,
