--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Remotes:
+    bioc::3.20/MultiAssayExperiment,
+    bioc::3.20/SummarizedExperiment,
+    bioc::3.20/enrichplot,
+    bioc::3.20/clusterProfiler,
+    bioc::3.20/InteractiveComplexHeatmap,
+    bioc::3.20/edgeR,
+    bioc::3.20/Biobase
 Imports: 
     pcaPP (>= 2.0-5),
     reshape2 (>= 1.4.4),
@@ -35,10 +43,3 @@ Imports:
     shinydashboard,
     ggiraph,
     pysparklyr
-Remotes:
-    bioc::3.20/MultiAssayExperiment,
-    bioc::3.20/SummarizedExperiment,
-    bioc::3.20/enrichplot,
-    bioc::3.20/clusterProfiler,
-    bioc::3.20/edgeR,
-    bioc::3.20/Biobase
