--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+biocViews:
 Remotes:
     bioc::3.20/MultiAssayExperiment,
     bioc::3.20/SummarizedExperiment,
