--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(generate_colData)
 export(generate_colData_random)
 export(generate_coldata_for_local_tcga_data)
 export(generate_sample_info)
+export(get_latest_file_group_df)
 export(ggvolcano_custom)
 export(ggvolcano_limma)
 export(go_enrich_dotplot)
