refactor: add missing package imports in NAMESPACE for enhanced functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ import(clusterProfiler)
 import(dplyr)
 import(edgeR)
 import(enrichplot)
+import(future)
+import(future.apply)
 import(ggiraph)
 import(ggplot2)
 import(ggrepel)
@@ -61,6 +63,8 @@ import(limma)
 import(org.Hs.eg.db)
 import(pcaPP)
 import(pheatmap)
+import(promises)
+import(purrr)
 import(readr)
 import(readxl)
 import(reshape2)
@@ -70,6 +74,7 @@ import(shinydashboard)
 import(sparklyr)
 import(stringr)
 import(tibble)
+import(tictoc)
 import(tidyr)
 import(viridis)
 importFrom(DT,dataTableOutput)
