feat: add interactive gene selector UI and server modules for enhanced volcano plot functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(generate_coldata_for_local_tcga_data)
 export(generate_sample_info)
 export(get_latest_file_group_df)
 export(ggvolcano_custom)
+export(ggvolcano_custom_interactive)
 export(ggvolcano_limma)
 export(go_enrich_dotplot)
 export(gtf2expr)
@@ -33,6 +34,8 @@ export(make_heatmap_mae)
 export(make_heatmap_mae_pheatmap)
 export(mod_filter_server)
 export(mod_filter_sidebar_ui)
+export(mod_geneSelector_server)
+export(mod_geneSelector_ui)
 export(query_spark_rnaseqdata)
 export(run_heatmap_app)
 export(sampleSelectionServer)
