--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     org.Hs.eg.db,
     promises,
     future,
-    purrr
+    purrr,
+    shinycssloaders
 Remotes:
     bioc::3.20/edgeR,
     bioc::3.20/MultiAssayExperiment,
