--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ import(readxl)
 import(reshape2)
 import(shiny)
 import(shinybusy)
+import(shinycssloaders)
 import(shinydashboard)
 import(sparklyr)
 import(stringr)
