feat: add PCA plot functionality with server and UI modules

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Prep4ExprComp)
 export(RNAseqShinyAppSpark)
 export(TissueTyper)
 export(convert_long_to_wide)
+export(createPCAPlot)
 export(create_mae_airway)
 export(create_mae_airway_edgeR)
 export(dbBrowserServer)
@@ -36,6 +37,8 @@ export(mod_filter_server)
 export(mod_filter_sidebar_ui)
 export(mod_geneSelector_server)
 export(mod_geneSelector_ui)
+export(pcaModuleServer)
+export(pcaModuleUI)
 export(query_spark_rnaseqdata)
 export(run_heatmap_app)
 export(sampleSelectionServer)
