feat: add GSEA module UI and server functions with documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(ggvolcano_custom)
 export(ggvolcano_custom_interactive)
 export(ggvolcano_limma)
 export(go_enrich_dotplot)
+export(gseaFCModuleServer)
+export(gseaFCModuleUI)
 export(gtf2expr)
 export(input_and_prep_file)
 export(input_and_prep_file_directly)
