--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,18 +28,18 @@ Imports:
     dplyr (>= 1.1.4),
     sparklyr (>= 1.8.6),
     shiny (>= 1.7.1),
-    shinybusy,
-    DBI,
-    DT,
-    bslib,
-    shinydashboard,
-    ggiraph,
-    pysparklyr,
+    shinybusy (>= 0.3.3),
+    DBI (>= 1.2.3),
+    DT (>= 0.33),
+    bslib (>= 0.9.0),
+    shinydashboard (>= 0.7.2),
+    ggiraph (>= 0.8.12),
+    pysparklyr (>= 0.1.5),
     org.Hs.eg.db (>= 3.19.1),
-    promises,
-    future,
-    purrr,
-    shinycssloaders,
+    promises (>= 1.3.2),
+    future (>= 1.34.0),
+    purrr (>= 1.0.2),
+    shinycssloaders (>= 1.1.0),
     clusterProfiler (>= 4.12.6),
     fgsea (>= 1.30.0),
     enrichplot (>= 1.24.4)
