--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ export(mod_geneSelector_server)
 export(mod_geneSelector_ui)
 export(pcaModuleServer)
 export(pcaModuleUI)
+export(progressPopupServer)
+export(progressPopupUI)
 export(query_spark_rnaseqdata)
 export(run_heatmap_app)
 export(sampleSelectionServer)
