--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,12 +39,16 @@ Imports:
     promises (>= 1.3.2),
     future (>= 1.34.0),
     purrr (>= 1.0.2),
-    shinycssloaders (>= 1.1.0)
-
+    shinycssloaders (>= 1.1.0),
+    clusterProfiler (>= 4.12.6),
+    fgsea (>= 1.30.0),
+    enrichplot (>= 1.24.4)
 Remotes:
     bioc::3.20/edgeR,
     bioc::3.20/MultiAssayExperiment,
     bioc::3.20/SummarizedExperiment,
+    bioc::3.20/enrichplot,
+    bioc::3.20/clusterProfiler,
     bioc::3.20/Biobase,
     bioc::3.20/InteractiveComplexHeatmap,
     bioc::3.20/limma
