feat: add useShinyjs import to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ import(sparklyr)
 import(stringr)
 import(tibble)
 import(tidyr)
+import(useShinyjs)
 import(viridis)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
