feat: update import statements for shinyjs in NAMESPACE and RNAseqShinyApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,11 +81,11 @@ import(shiny)
 import(shinybusy)
 import(shinycssloaders)
 import(shinydashboard)
+import(shinyjs)
 import(sparklyr)
 import(stringr)
 import(tibble)
 import(tidyr)
-import(useShinyjs)
 import(viridis)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
