refactor: update DESCRIPTION and import additional packages for enhanced functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,9 @@ Imports:
     purrr (>= 1.0.2),
     shinycssloaders (>= 1.1.0),
     shinyjs (>= 2.1.0),
-    progressr (>= 0.15.1)
+    progressr (>= 0.15.1),
+    factoextra (>= 1.0.7),
+    ggforce (>= 0.4.2)
 Suggests:
     edgeR,
     MultiAssayExperiment,
