refactor: add factoextra and ggforce packages to NAMESPACE for enhanced visualization capabilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,9 @@ import(clusterProfiler)
 import(dplyr)
 import(edgeR)
 import(enrichplot)
+import(factoextra)
 import(future)
+import(ggforce)
 import(ggiraph)
 import(ggplot2)
 import(ggrepel)
