fix: update documentation references in Rd files to correct R script locations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(sparkConnectionServer)
 export(sparkConnectionUI)
 export(target_exprofile)
 export(transfExprFormat)
+export(trigger_cluster_query_by_pattern)
 import(DBI)
 import(DT)
 import(InteractiveComplexHeatmap)
@@ -89,7 +90,13 @@ import(stringr)
 import(tibble)
 import(tidyr)
 import(viridis)
+importFrom(DBI,dbExecute)
+importFrom(DBI,dbGetQuery)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(enrichplot,color_palette)
 importFrom(ggpubr,color_palette)
+importFrom(promises,future_promise)
+importFrom(sparklyr,spark_connect)
+importFrom(sparklyr,spark_disconnect)
+importFrom(stringr,str_equal)
