--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Depends: 
+    R (>= 4.4.2)
 Imports: 
     pcaPP (>= 2.0-5),
     reshape2 (>= 1.4.4),
