feat: add gene list and module UI/server functions for WGCNA analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,10 @@ export(dbBrowserUI)
 export(expr_pattern)
 export(filterModuleServer)
 export(filterModuleUI)
+export(geneListServer)
+export(geneListUI)
+export(geneModuleServer)
+export(geneModuleUI)
 export(generate_colData)
 export(generate_colData_random)
 export(generate_coldata_for_local_tcga_data)
@@ -45,9 +49,13 @@ export(progressPopupServer)
 export(progressPopupUI)
 export(query_spark_rnaseqdata)
 export(run_heatmap_app)
+export(sampleClustServer)
+export(sampleClustUI)
 export(sampleSelectionServer)
 export(sampleSelectionUI)
 export(se2longformat)
+export(sftServer)
+export(sftUI)
 export(show_spark_tables)
 export(sparkConnectionServer)
 export(sparkConnectionUI)
@@ -60,6 +68,7 @@ import(InteractiveComplexHeatmap)
 import(MultiAssayExperiment)
 import(RColorBrewer)
 import(SummarizedExperiment)
+import(WGCNA)
 import(bslib)
 import(clusterProfiler)
 import(dplyr)
@@ -75,6 +84,7 @@ import(limma)
 import(org.Hs.eg.db)
 import(pcaPP)
 import(pheatmap)
+import(plotly)
 import(promises)
 import(purrr)
 import(readr)
