feat: add plotly package to Imports section in DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,8 @@ Imports:
     progressr (>= 0.15.1),
     factoextra (>= 1.0.7),
     ggforce (>= 0.4.2),
-    WGCNA (>= 1.73)
+    WGCNA (>= 1.73),
+    plotly (>= 4.10.4)
 Suggests:
     edgeR,
     MultiAssayExperiment,
