feat(mouse): support enrichment analysis with mouse database

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ import(ggplot2)
 import(ggrepel)
 import(limma)
 import(org.Hs.eg.db)
+import(org.Mm.eg.db)
 import(pcaPP)
 import(pheatmap)
 import(plotly)
