--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Imports:
     ggiraph (>= 0.8.12),
     pysparklyr (>= 0.1.5),
     org.Hs.eg.db (>= 3.19.1),
-    org.Mm.eg.db (>= 3.21.0)
+    org.Mm.eg.db (>= 3.21.0),
     promises (>= 1.3.2),
     future (>= 1.34.0),
     purrr (>= 1.0.2),
